--- a/server/index.html
+++ b/server/index.html
@@ -5,7 +5,7 @@
 	<script src="https://d3js.org/d3.v4.js"></script>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
-	<title>D3 Page Template</title>
+	<title>D3 is sxc</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
 </head>
 
@@ -92,6 +92,7 @@ var generateVis = function() {
 			.style("background-color", e => colorScale(e.answer));
 
 		})
+		
 	})
 
 	
