--- a/server/index.html
+++ b/server/index.html
@@ -32,7 +32,7 @@
 	<input type="checkbox" id="normalise_checkbox" onchange = "updateVis()" checked>
 	<label for="normalise_checkbox">Normalise populations</label>
 
-	<div id="tooltip_wrapper"><p></p></div>
+	<div id="tooltip_wrapper"></div>
 </body>
 
 
